--- a/src/styles/veneu.scss
+++ b/src/styles/veneu.scss
@@ -18,11 +18,11 @@
   --veneu-light-lowlight: #ffffff50;
   --veneu-light-firefox-glass: #dfdfdff8;
 
-  --veneu-dark: #2b2b2f;
-  --veneu-dark-backdrop: #2b2b2fbb;
+  --veneu-dark: #3d3d3d;
+  --veneu-dark-backdrop: #3d3d3dbb;
   --veneu-dark-highlight: #0000002a;
   --veneu-dark-lowlight: #ffffff09;
-  --veneu-dark-firefox-glass: #2b2b2ff8;
+  --veneu-dark-firefox-glass: #3d3d3df8;
 
   --calendar-border-current: var(--veneu-red) 2px solid !important;
 
