QSCROLL GROWING FINALLY

--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -552,3 +552,7 @@ h1 {
 .q-expansion-item .q-item {
   border-radius: 0.875rem !important;
 }
+
+.q-scrollarea .absolute.full-width {
+  position: relative;
+}
