--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -461,8 +461,8 @@ h1 {
 .q-select__dialog,
 .q-menu,
 .q-time {
-  -webkit-backdrop-filter: blur(4px) !important;
-  backdrop-filter: blur(4px) !important;
+  -webkit-backdrop-filter: blur(5px) !important;
+  backdrop-filter: blur(5px) !important;
   background: unset !important;
   background-color: var(--veneu-background-backdrop) !important;
   border: none;
@@ -553,7 +553,7 @@ h1 {
   border-radius: 0.875rem !important;
 }
 
-.q-scrollarea .absolute.full-width {
+.checkinselector .q-scrollarea .absolute.full-width {
   position: relative;
 }
 
