--- a/src/styles/veneu.scss
+++ b/src/styles/veneu.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "Exo 2";
+  src: local("Exo 2"), url(../fonts/Exo_2/Exo2-VariableFont_wght.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Comfortaa";
+  src: local("Comfortaa"), url(../fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf) format("truetype");
+}
+
 :root {
   /* Colors */
   --veneu-blue: #1a4974;
