--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -508,9 +508,9 @@ h1 {
   margin: 0rem 0.5rem;
 }
 
-// .q-field__native {
-//   font-size: 16px !important;
-// }
+.q-field__native {
+  font-size: 16px !important;
+}
 
 #theme {
   .q-toggle__inner--falsy .q-toggle__thumb::after {
