--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -465,12 +465,21 @@ h1 {
 .video-js .vjs-big-play-button,
 .q-select__dialog,
 .q-menu,
-.q-time {
+.q-time,
+.glassmorphism,
+.lockview {
   -webkit-backdrop-filter: blur(5px) !important;
   backdrop-filter: blur(5px) !important;
   background: unset !important;
   background-color: var(--veneu-background-backdrop) !important;
   border: none;
+  border-radius: inherit;
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
+}
+
+.lockview {
+  -webkit-backdrop-filter: blur(12px) !important;
+  backdrop-filter: blur(12px) !important;
 }
 
 @-moz-document url-prefix() {
@@ -478,13 +487,22 @@ h1 {
   .video-js .vjs-control-bar,
   .video-js .vjs-big-play-button,
   .q-select__dialog,
-  .q-menu {
+  .q-menu,
+  .q-time,
+  .glassmorphism {
     background-color: var(--veneu-firefox-glass) !important;
     border: none;
   }
-  .q-dialog__inner .q-card {
+  .q-dialog__inner .q-card,
+  .lockview {
     background-color: var(--veneu-background) !important;
+    border: none;
   }
+}
+
+.anim {
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
+  -webkit-transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
 }
 
 h1 {
