--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -9,7 +9,8 @@ body {
   height: 100% !important;
 }
 
-* {
+.veneu-logo,
+.veneu-logo * {
   transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
 }
 
@@ -77,12 +78,14 @@ body,
 .q-calendar {
   background: unset !important;
   background-color: var(--veneu-background) !important;
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
   // background-size: calc(100% / 2);
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
 .q-dialog__backdrop {
   background-color: var(--veneu-background-backdrop) !important;
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
 }
 
 .q-stepper__step-inner {
@@ -197,6 +200,7 @@ body,
     box-shadow: none !important;
     border-radius: 0.25rem !important;
     background: var(--veneu-background);
+    transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
 
     &:first-child {
       border-top-left-radius: 1rem !important;
@@ -278,6 +282,7 @@ h1 {
 
 .q-btn.bg-primary {
   background-color: var(--veneu-background) !important;
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
   animation: grow-in-button 0.5s forwards !important;
   * {
     color: var(--veneu-text-alternate) !important;
@@ -293,6 +298,7 @@ h1 {
   background-color: var(--veneu-red) !important;
   &.q-btn {
     background-color: var(--veneu-background) !important;
+    transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
     animation: grow-in-button 0.5s forwards !important;
     * {
       color: var(--veneu-text-alternate) !important;
@@ -500,6 +506,7 @@ h1 {
   .q-dialog__inner .q-card,
   .lockview {
     background-color: var(--veneu-background) !important;
+    transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
     border: none;
   }
 }
