--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -360,7 +360,7 @@ h1 {
 }
 
 .q-calendar {
-  min-width: 60rem !important;
+  // min-width: 60rem !important;
   * {
     color: var(--veneu-text-primary) !important;
     border-color: var(--veneu-text-primary) !important;
