--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -10,6 +10,10 @@ body {
   transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
 }
 
+* {
+  transition: background-color 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
+}
+
 .veneu-logo {
   transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1) !important;
 }
