--- a/src/styles/veneu.scss
+++ b/src/styles/veneu.scss
@@ -109,7 +109,7 @@
   --red-field-shadow: inset 0.25rem 0.25rem 0.75rem var(--veneu-red-highlight), inset -0.25rem -0.25rem 0.75rem var(--veneu-red-lowlight); */
 }
 
-* {
+*:not(font) {
   font-family: "Comfortaa", sans-serif;
   /* -webkit-font-smoothing: antialiased; */
   -moz-osx-font-smoothing: grayscale;
