--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -28,6 +28,15 @@ aside.q-drawer--mobile {
   max-width: 25rem !important;
 }
 
+.q-gutter-x-md {
+  padding-left: 0 !important;
+  padding-right: 16px !important;
+  & > * {
+    margin-left: 16px !important;
+    margin-right: 0 !important;
+  }
+}
+
 .q-field--standout .q-field__control,
 .q-toggle__track {
   background: none;
