--- a/apollo-server/email_templates/newAuth.handlebars
+++ b/apollo-server/email_templates/newAuth.handlebars
@@ -96,7 +96,7 @@
 															<td class="h1 pb25" style="color:#ffffff; font-family:'Muli', Arial,sans-serif; font-size:40px; line-height:46px; text-align:center; padding-bottom:25px;">Hey there!</td>
 														</tr>
 														<tr>
-															<td class="text-center pb25" style="color:#c1cddc; font-family:'Muli', Arial,sans-serif; font-size:16px; line-height:30px; text-align:center; padding-bottom:25px;"> Welcome to Veneu! <span class="m-hide"><br /> You have been added to the {{type}} {{course}} by {{instructor}}.</span></td>
+															<td class="text-center pb25" style="color:#c1cddc; font-family:'Muli', Arial,sans-serif; font-size:16px; line-height:30px; text-align:center; padding-bottom:25px;"> Welcome to Veneu! <span class="m-hide"><br /> "{{name}}" ({{type}}) has been shared with you by {{instructor}}.</span></td>
 														</tr>
 														<!-- Button -->
 														<tr>
