--- a/src/styles/veneu.scss
+++ b/src/styles/veneu.scss
@@ -277,8 +277,12 @@ label {
   }
 }
 
+html,
+body,
 #app {
-  max-height: 100vh;
+  max-height: 100vh !important;
+  min-height: 100vh !important;
+  height: 100vh !important;
 }
 
 .neu-concave {
