--- a/src/styles/veneu.scss
+++ b/src/styles/veneu.scss
@@ -80,27 +80,46 @@
   --veneu-text-primary: var(--veneu-blue);
   --veneu-text-alternate: var(--veneu-light);
 
+  --veneu-shadow-x-pos: 0.125rem;
+  --veneu-shadow-x-neg: -0.125rem;
+  --veneu-shadow-y-pos: 0.125rem;
+  --veneu-shadow-y-neg: -0.125rem;
+  --veneu-shadow-blur: 0.25rem;
+  --veneu-shadow-spread: -0.0625rem;
+
   * {
     color: var(--veneu-text-primary);
   }
 
   /* Shadows */
-  --elevated-shadow: 0.125rem 0.25rem 0.25rem var(--veneu-background-highlight),
-    -0.125rem -0.25rem 0.25rem var(--veneu-background-lowlight);
-  /* --elevated-shadow: 0.5rem 0.5rem 0.5rem var(--veneu-background-highlight),
-    -0.5rem -0.5rem 0.5rem var(--veneu-background-lowlight); */
-  --button-shadow: 0.125rem 0.25rem 0.25rem var(--veneu-background-highlight),
-    -0.125rem -0.25rem 0.25rem var(--veneu-background-lowlight);
-  --field-shadow: inset 0.125rem 0.25rem 0.25rem var(--veneu-background-highlight),
-    inset -0.125rem -0.25rem 0.25rem var(--veneu-background-lowlight);
-  --red-button-shadow: 0.125rem 0.25rem 0.25rem var(--veneu-red-highlight),
-    -0.125rem -0.25rem 0.25rem var(--veneu-red-lowlight);
-  --red-field-shadow: inset 0.125rem 0.25rem 0.25rem var(--veneu-red-highlight),
-    inset -0.125rem -0.25rem 0.25rem var(--veneu-red-lowlight);
-  --blue-button-shadow: 0.125rem 0.25rem 0.25rem var(--veneu-blue-highlight),
-    -0.125rem -0.25rem 0.25rem var(--veneu-blue-lowlight);
-  --blue-field-shadow: inset 0.125rem 0.25rem 0.25rem var(--veneu-blue-highlight),
-    inset -0.125rem -0.25rem 0.25rem var(--veneu-blue-lowlight);
+  --elevated-shadow: var(--veneu-shadow-x-pos) var(--veneu-shadow-y-pos) var(--veneu-shadow-blur)
+      var(--veneu-shadow-spread) var(--veneu-background-highlight),
+    var(--veneu-shadow-x-neg) var(--veneu-shadow-y-neg) var(--veneu-shadow-blur) var(--veneu-shadow-spread)
+      var(--veneu-background-lowlight);
+  --button-shadow: var(--veneu-shadow-x-pos) var(--veneu-shadow-y-pos) var(--veneu-shadow-blur)
+      var(--veneu-shadow-spread) var(--veneu-background-highlight),
+    var(--veneu-shadow-x-neg) var(--veneu-shadow-y-neg) var(--veneu-shadow-blur) var(--veneu-shadow-spread)
+      var(--veneu-background-lowlight);
+  --field-shadow: inset var(--veneu-shadow-x-pos) var(--veneu-shadow-y-pos) var(--veneu-shadow-blur)
+      var(--veneu-shadow-spread) var(--veneu-background-highlight),
+    inset var(--veneu-shadow-x-neg) var(--veneu-shadow-y-neg) var(--veneu-shadow-blur) var(--veneu-shadow-spread)
+      var(--veneu-background-lowlight);
+  --red-button-shadow: var(--veneu-shadow-x-pos) var(--veneu-shadow-y-pos) var(--veneu-shadow-blur)
+      var(--veneu-shadow-spread) var(--veneu-red-highlight),
+    var(--veneu-shadow-x-neg) var(--veneu-shadow-y-neg) var(--veneu-shadow-blur) var(--veneu-shadow-spread)
+      var(--veneu-red-lowlight);
+  --red-field-shadow: inset var(--veneu-shadow-x-pos) var(--veneu-shadow-y-pos) var(--veneu-shadow-blur)
+      var(--veneu-shadow-spread) var(--veneu-red-highlight),
+    inset var(--veneu-shadow-x-neg) var(--veneu-shadow-y-neg) var(--veneu-shadow-blur) var(--veneu-shadow-spread)
+      var(--veneu-red-lowlight);
+  --blue-button-shadow: var(--veneu-shadow-x-pos) var(--veneu-shadow-y-pos) var(--veneu-shadow-blur)
+      var(--veneu-shadow-spread) var(--veneu-blue-highlight),
+    var(--veneu-shadow-x-neg) var(--veneu-shadow-y-neg) var(--veneu-shadow-blur) var(--veneu-shadow-spread)
+      var(--veneu-blue-lowlight);
+  --blue-field-shadow: inset var(--veneu-shadow-x-pos) var(--veneu-shadow-y-pos) var(--veneu-shadow-blur)
+      var(--veneu-shadow-spread) var(--veneu-blue-highlight),
+    inset var(--veneu-shadow-x-neg) var(--veneu-shadow-y-neg) var(--veneu-shadow-blur) var(--veneu-shadow-spread)
+      var(--veneu-blue-lowlight);
 
   /* --elevated-shadow: 0.25rem 0.25rem 0.75rem var(--veneu-light-highlight), -0.25rem -0.25rem 0.75rem #ffffff;
   --button-shadow: 0.25rem 0.25rem 0.75rem var(--veneu-light-highlight), -0.25rem -0.25rem 0.75rem #ffffff;
